# ejercicios_1

./: CMakeLists.txt  README.md  main.c
include/: stats.h
src/: ej1.c  ej2.c  ej3.c  stats.c
